--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -13,6 +13,8 @@
   width: 100%;
   z-index: 200;
   min-width: 350px;
+  background-color: white;
+  height: 80px;
 
   .navbar-hero-name{
     color: #2d2e32;
