--- a/src/styles/Intro.scss
+++ b/src/styles/Intro.scss
@@ -1,6 +1,7 @@
 .intro-container {
   display: flex;
   justify-content: center;
+  background-color: #F9F9F9;
 
   .about {
     max-width: 750px;
@@ -64,6 +65,7 @@
         }
       }
       p {
+        max-width: 470px;
         margin: 0 20px;
         text-align: center;
         font-weight: 500;
@@ -103,11 +105,14 @@
         }
 
         ul {
-          padding: 0 20px;
+          background-color: white;
+          border-radius: 10px;
+          margin: 10px 10px;
+          padding: 20px 20px;
           list-style: none;
           display: flex;
           flex-wrap: wrap;
-          gap: 30px;
+          gap: 28px;
           margin-bottom: 50px;
 
           li {
