Scroll to selected section

--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   background-color: #f9f9f9;
+  padding-top: 60px;
 
   .projects-content {
     margin-top: 30px;
