--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 20px;
 
   .about-content {
     margin-top: 30px;
