--- a/src/styles/Sidebar.scss
+++ b/src/styles/Sidebar.scss
@@ -33,11 +33,22 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+
       li {
+        text-align: center;
         font-size: 22px;
         font-weight: 500;
         margin-bottom: 40px;
+        cursor: pointer;
+        height: 50px;
+        width: 200px;
+      }
+    
+      li:hover {
+        font-size: 30px;
+        color: #147efb;
       }
     }
+    
   }
 }
