--- a/src/styles/Intro.scss
+++ b/src/styles/Intro.scss
@@ -1,7 +1,7 @@
 .intro-container {
   display: flex;
   justify-content: center;
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
 
   .about {
     max-width: 750px;
@@ -11,121 +11,152 @@
     justify-content: center;
     align-items: center;
 
-    .image {
-      min-width: 350px;
-      min-height: 350px;
-      width: 80vw;
-      height: 80vw;
-      max-width: 350px;
-      max-height: 350px;
-      background-size: cover;
-      background-position: 50%;
-      background-repeat: no-repeat;
-      border: 3px solid #2d2e32;
-      animation: morph 8s ease-in-out infinite;
-    }
-
-    @keyframes morph {
-      0% {
-        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-      }
-      50% {
-        border-radius: 40% 60% 70% 30%/30% 70% 40% 60%;
-      }
-      100% {
-        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-      }
-    }
-
-    .about-text {
-      min-width: 400px;
+    .intro-text-img-container {
       display: flex;
       flex-direction: column;
+      justify-content: center;
       align-items: center;
 
-      .about-title {
-        font-size: 20px;
-        line-height: 1.2;
-        margin-bottom: 2rem;
-        margin-top: 2rem;
-        display: flex;
-        justify-content: center;
-        position: relative;
-
-        h1 {
-          width: 300px;
-        }
-
-        img {
-          width: 60px;
-          height: 60px;
-          position: absolute;
-          right: -10px;
-          top: 17px;
-        }
-      }
-      p {
-        max-width: 470px;
-        margin: 0 20px;
-        text-align: center;
-        font-weight: 500;
-        color: #555555;
-        line-height: 1.6;
-        margin-bottom: 1rem;
+      @media (min-width: 1000px) {
+        flex-direction: row-reverse;
+        margin-bottom: 20px;
+        gap: 10vw;
       }
 
-      .socials {
-        font-size: 40px;
-        margin-bottom: 30px;
+      .image {
+        min-width: 350px;
+        min-height: 350px;
+        width: 80vw;
+        height: 80vw;
+        max-width: 350px;
+        max-height: 350px;
+        background-size: cover;
+        background-position: 50%;
+        background-repeat: no-repeat;
+        border: 3px solid #2d2e32;
+        animation: morph 8s ease-in-out infinite;
+      }
 
-        #linkedIn-link {
-          color: #0077b5;
+      @keyframes morph {
+        0% {
+          border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
         }
-
-        #github-link {
-          color: black;
-          margin-left: 20px;
+        50% {
+          border-radius: 40% 60% 70% 30%/30% 70% 40% 60%;
         }
-
-        a {
-          text-decoration: none;
+        100% {
+          border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
         }
       }
 
-      .tech-stack {
+      .about-text {
+        min-width: 400px;
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
 
+        .about-title {
+          font-size: 20px;
+          line-height: 1.2;
+          margin-bottom: 2rem;
+          margin-top: 2rem;
+          display: flex;
+          justify-content: center;
+          position: relative;
+
+          h1 {
+            width: 300px;
+
+            @media (min-width: 1000px) {
+              width: 500px;
+            }
+          }
+
+          img {
+            width: 60px;
+            height: 60px;
+            position: absolute;
+            right: -10px;
+            top: 17px;
+
+            @media (min-width: 1000px) {
+              top: -10px;
+            }
+          }
+        }
         p {
-          border-bottom: 1px solid black;
-          padding: 8px 15px;
-          width: 150px;
+          max-width: 470px;
+          margin: 0 20px;
+          text-align: center;
+          font-weight: 500;
+          color: #555555;
+          line-height: 1.6;
+          margin-bottom: 1rem;
+
+          @media (min-width: 1000px) {
+            text-align: start;
+            margin-left: 0;
+          }
         }
 
-        ul {
-          background-color: white;
-          border-radius: 10px;
-          margin: 10px 10px;
-          padding: 20px 20px;
-          list-style: none;
+        .socials {
+          font-size: 40px;
+          margin-bottom: 30px;
+
+          @media (min-width: 1000px) {
+            margin-left: 10px;
+            align-self: flex-start;
+          }
+
+          #linkedIn-link {
+            color: #0077b5;
+          }
+
+          #github-link {
+            color: black;
+            margin-left: 20px;
+          }
+
+          a {
+            text-decoration: none;
+          }
+        }
+      }
+    }
+    .tech-stack {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 30px;
+
+      p {
+        border-bottom: 1px solid black;
+        padding: 8px 15px;
+        width: 150px;
+      }
+
+      ul {
+        background-color: white;
+        border-radius: 10px;
+        margin: 10px 10px;
+        padding: 20px 20px;
+        list-style: none;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 28px;
+        margin-bottom: 50px;
+
+        li {
           display: flex;
-          flex-wrap: wrap;
-          gap: 28px;
-          margin-bottom: 50px;
+          align-items: center;
+          justify-content: center;
+          border-radius: 50%;
+          background-color: white;
+          cursor: pointer;
 
-          li {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 50%;
-            background-color: white;
-            cursor: pointer;
-
-            img {
-              width: 48px;
-            }
+          img {
+            width: 48px;
           }
         }
       }
