--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -13,6 +13,10 @@
     justify-content: center;
     align-items: center;
 
+    @media (min-width: 1000px) {
+      flex-direction: row;
+    }
+
     .image-side {
       #about-image {
         width: 90vw;
@@ -51,6 +55,12 @@
         font-weight: 500;
         line-height: 1.5;
         margin-bottom: 30px;
+
+        @media (min-width: 1000px) {
+          margin-left: 10vw;
+          text-align: start;
+          width: 40vw;
+        }
       }
     }
   }
