--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -4,6 +4,10 @@
   align-items: center;
   padding-top: 20px;
 
+  @media(min-width: 1000px) {
+    padding-top: 40px;
+  }
+
   .about-content {
     margin-top: 30px;
     margin-bottom: 20px;
