--- a/src/styles/Intro.scss
+++ b/src/styles/Intro.scss
@@ -148,6 +148,10 @@
         gap: 28px;
         margin-bottom: 50px;
 
+        @media (min-width: 1000px) {
+          margin-top: 30px;
+        }
+
         li {
           display: flex;
           align-items: center;
