--- a/src/styles/ProjectItem.scss
+++ b/src/styles/ProjectItem.scss
@@ -5,17 +5,28 @@
   align-items: center;
   padding-top: 15px;
   width: 90vw;
-  max-width: 990px;
+  max-width: 600px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 25px;
   background-color: white;
   margin-bottom: 50px;
 
+  @media (min-width: 1000px) {
+    max-width: 900px;
+    flex-direction: row;
+    gap: 5%;
+    padding: 2% 5%;
+  }
+
   img {
     width: 90%;
     margin-top: 5px;
-    max-width: 530px;
+    max-width: 500px;
     border-radius: 15px;
+
+    @media (min-width: 1000px) {
+      max-width: 50% ;
+    }
   }
 
   .project-info {
