--- a/src/styles/ProjectItem.scss
+++ b/src/styles/ProjectItem.scss
@@ -34,6 +34,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 90%;
 
     .project-title {
       text-transform: uppercase;
@@ -48,12 +49,17 @@
       width: 350px;
       text-align: center;
       margin-bottom: 20px;
+      max-width: 100%;
     }
 
     .project-stack {
       display: flex;
+      justify-content: center;
       gap: 10px;
       margin-bottom: 20px;
+      list-style: none;
+      flex-wrap: wrap;
+      padding-left: 0;
 
       p {
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
@@ -65,8 +71,10 @@
 
     .project-links {
       display: flex;
+      justify-content: center;
       gap: 30px;
       margin-bottom: 20px;
+      flex-wrap: wrap;
 
       :hover {
         color: #147efb;
