--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -8,13 +8,13 @@
 
   h3 {
     font-size: 25px;
-    color: rgb(18, 162, 27);
+    color: #9A7557;
   }
   .footer-emoji {
     margin-left: 10px;
     font-size: 70px;
     cursor: pointer;
-    transition: transform 2.6s;
+    transition: transform 2s;
   }
   
   .footer-emoji:hover {
