--- a/src/styles/ProjectItem.scss
+++ b/src/styles/ProjectItem.scss
@@ -17,15 +17,20 @@
     gap: 5%;
     padding: 2% 5%;
   }
-
-  img {
-    width: 90%;
-    margin-top: 5px;
-    max-width: 500px;
-    border-radius: 15px;
+  a {
+    max-width: 90%;
 
     @media (min-width: 1000px) {
-      max-width: 50% ;
+      max-width: 100%;
+    }
+
+    img {
+      width: 100%;
+      margin-top: 5px;
+      max-width: 500px;
+      border-radius: 15px;
+
+
     }
   }
 
