--- a/src/styles/ProjectItem.scss
+++ b/src/styles/ProjectItem.scss
@@ -29,8 +29,7 @@
       margin-top: 5px;
       max-width: 500px;
       border-radius: 15px;
-
-
+      border: 1px solid rgb(188, 187, 187);
     }
   }
 
