--- a/src/styles/Intro.scss
+++ b/src/styles/Intro.scss
@@ -144,6 +144,7 @@
         padding: 20px 20px;
         list-style: none;
         display: flex;
+        justify-content: center;
         flex-wrap: wrap;
         gap: 28px;
         margin-bottom: 50px;
