Add messenger project

--- a/src/styles/Intro.scss
+++ b/src/styles/Intro.scss
@@ -110,11 +110,16 @@
 
           #linkedIn-link {
             color: #0077b5;
+            margin-left: 20px;
           }
 
           #github-link {
             color: black;
             margin-left: 20px;
+          }
+
+          #resume {
+            color: rgb(33, 145, 14);
           }
 
           a {
